# banpanelpain

./: README.md
DiscordFlask/: admin_manager.py  admins.json  app.py  bot.py  main.py  models.py  pyproject.toml  replit.md
DiscordFlask/static/js/: main.js
DiscordFlask/templates/: admin_panel.html  base.html  index.html  login.html  staff.html
